# timetracker-rs

./: Cargo.toml  readme.md
.github/workflows/: build.yml
src/: cli.rs  duration.rs  icons.rs  main.rs  storage.rs  time.rs  tracker.rs  tui.rs
src/tui/: entry_form.rs  mod.rs  navigation.rs  render.rs  search.rs  theme.rs  types.rs
