[package]
name = "timetracker"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tt"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
anyhow = "1"
ratatui = "0.29"
crossterm = "0.28"
